[package]
name = "raw-socket-sniffer-rs"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = [ "ws2ipdef", "winsock2" ] }
libc = "*"